--- a/source/settings.json
+++ b/source/settings.json
@@ -1,6 +1,6 @@
 {
   "name": "Cosmos",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "images": [
     {
       "variable": "logo_image",
@@ -492,7 +492,7 @@
       "variable": "all_products_button_text",
       "label": "All products button text",
       "type": "text",
-      "description": "Displays underneath featured products and links to your Product Page",
+      "description": "Displays underneath featured products and links to your Products Page",
       "default": "All Products"
     },
     {
