chore: switch homepage product layout default to `standard-grid`

--- a/source/settings.json
+++ b/source/settings.json
@@ -474,7 +474,7 @@
         ["Alternating", "alternating"],
         ["Standard grid", "standard-grid"]
       ],
-      "default": "alternating",
+      "default": "standard-grid",
       "description": "Sets a layout style for featured products on the Home page"
     },
     {
