--- a/source/settings.json
+++ b/source/settings.json
@@ -809,6 +809,44 @@
       "description": "Displays related products on the Product page"
     },
     {
+      "variable": "related_products_header",
+      "label": "Related products header",
+      "type": "text",
+      "description": "Displays above related products on Products pages",
+      "default": "You might also like",
+      "requires": [
+        "show_related_products eq true"
+      ]
+    },
+    {
+      "variable": "related_items",
+      "label": "Related products",
+      "type": "select",
+      "options": "1..8",
+      "default": 4,
+      "description": "The maximum number of related products to show on Product pages",
+      "requires": [
+        "show_related_products eq true"
+      ]
+    },
+    {
+      "variable": "related_products_order",
+      "label": "Related products order",
+      "type": "select",
+      "options": [
+        ["Top Selling", "sales"],
+        ["Newest", "newest"],
+        ["Most views", "views"],
+        ["Recently updated", "updated_newest_to_oldest"],
+        ["Shop display order", "regular"]
+      ],
+      "default": "sales",
+      "description": "The order of related products on the Product pages",
+      "requires": [
+        "show_related_products eq true"
+      ]
+    },
+    {
       "variable": "money_format",
       "label": "Price display",
       "type": "select",
